Fri Sep 11 11:56:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_singleton_class_clone): Qnil must be used for a null
	  class reference when we use NIL_P() to check class reference
	  validity.  The bug was exposed by the spec test of Sequel.

	* eval.c (ruby_init): Use NEW_CREF().

Thu Sep 10 10:53:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_sysopen): workaround for MSVCRT's bug.
	  [ruby-core:24838]

Mon Sep  7 19:52:44 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): need select for WAIT_SELECT, even if
	  already timeout.  [ruby-dev:38971]
	  (WAIT_DONE): defined for mark threads which can be runnable.

Mon Sep  7 19:52:44 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): refine previous change.

Mon Sep  7 19:52:44 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): fix condition for making thread
	  runnable.  [ruby-core:23515]

Sun Sep  6 19:47:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
	  [ruby-core:24767]

Sun Sep  6 01:34:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_connect): return value was broken when some
	  error occurred.
	  [ruby-core:24234]

Fri Sep  4 10:03:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_eof): go to the next file if called after ARGF.close
	  or ARGF.skip.  a patch from Mike Kasick at [ruby-core:24561].

Sun Aug  9 17:43:44 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb.rb, lib/irb/init.rb, lib/irb/ext/save-history.rb: add
	  IRB::irb_at_exit. no use finalizer saving history. [ruby-dev-38563]

Wed Aug  5 15:29:54 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_flush): fsync() after buffer is flushed on win32.
	  backported from trunk.  [ruby-core:20043]


Tue Aug  4 11:00:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.h (RMATCH_REGS): added for compatibility.
